--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,mjs,cjs}": [
+      "eslint --fix",
       "prettier --write"
     ],
     "*.{json,md,yml,yaml,css,scss}": [
